force-app/main/default/objects/ssot__PromotionPartyTransaction__dlm/fields/ssot__rel_1729832111434_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729832111434_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionPartyTransaction_RelatedPar_rel</label>
    <referenceTo>ssot__LoyaltyProgramMember__dlm</referenceTo>
    <relationshipLabel>PromotionPartyTransaction_RelatedPar_rel</relationshipLabel>
    <relationshipName>rel_1729832111434_end</relationshipName>
    <type>Lookup</type>
</CustomField>