force-app/main/default/objects/ssot__PromotionPartyTransaction__dlm/fields/ssot__rel_1729832122322_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729832122322_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionPartyTransaction_LoyaltyTra_rel</label>
    <referenceTo>ssot__LoyaltyTransactionJournal__dlm</referenceTo>
    <relationshipLabel>PromotionPartyTransaction_LoyaltyTra_rel</relationshipLabel>
    <relationshipName>rel_1729832122322_end</relationshipName>
    <type>Lookup</type>
</CustomField>