force-app/main/default/objects/ssot__PromotionPartyTransaction__dlm/fields/ssot__rel_1731659059278_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731659059278_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionPartyTransaction_PromotionI_rel</label>
    <referenceTo>ssot__Promotion__dlm</referenceTo>
    <relationshipLabel>PromotionPartyTransaction_PromotionI_rel</relationshipLabel>
    <relationshipName>rel_1731659059278_end</relationshipName>
    <type>Lookup</type>
</CustomField>