force-app/main/default/objects/ssot__PromotionPartyTransaction__dlm/fields/ssot__RelatedPartyId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedPartyId__c</fullName>
    <label>Related Party</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedPartyId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>