force-app/main/default/objects/ssot__PromotionPartyTransaction__dlm/fields/ssot__RelatedPartyObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedPartyObject__c</fullName>
    <label>Related Party Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedPartyObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>